<resources>
    <string name="app_name">Writable</string>
    <string name="display_name">Display Name</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_password">Password</string>
    <string name="hint_repeat_password">Repeat Password</string>
    <string name="placeholder_terms_of_service">I have read and agree with the Terms of Service</string>
    <string name="hint_register_button">Create Account</string>
    <string name="placeholder_application_header">Application Header</string>
    <string name="login_button_text">LOGIN</string>
    <string name="text_register_account_question">Don\'t have an account?</string>
    <string name="text_register_navigation_link">Sign up now!</string>
    <string name="placeholder_no_internet_title">Ooooops!</string>
    <string name="placeholder_no_internet_line_1">Slow or no internet connection.</string>
    <string name="placeholder_no_internet_line_2">Check your internet settings and try again</string>
    <string name="placeholder_no_internet_button">Try again?</string>
    <string name="settings_change_profile">Change Account Information</string>
    <string name="settings_reset_password">Change Password</string>
    <string name="settings_delete_history">Delete all Saved Projects</string>
    <string name="settings_delete_account">Delete Account</string>
    <string name="settings_log_out">Sign out</string>
    <string name="hint_username">Display Name</string>
    <string name="string_change_acc_password">Confirm Account Changes</string>
    <string name="string_save_changes">Save Changes</string>
    <string name="hint_current_password">Current Password</string>
    <string name="hint_new_password">New Password</string>
    <string name="settings_delete_message">We\'re sad to see you go</string>
    <string name="delete_acc_line_1">All the data associated with this account will \n be deleted, including your user profile information, \n sprinting history and crated projects.</string>
    <string name="delete_acc_confirm">Confirm your E-mail Address</string>
    <string name="placeholder_project_title">Project Title</string>
    <string name="placeholder_project_description">Project Description</string>
    <string name="placeholder_project_word_count_label">Word Count:</string>
    <string name="placeholder_project_word_count">10.000</string>
    <string name="string_create_project">Create Project</string>
    <string name="placeholder_hm">Hmm...</string>
    <string name="placeholder_empty_projects">Seems like you have not created any projects yet</string>
    <string name="string_completed">Completed</string>
    <string name="hint_title">Title</string>
    <string name="hint_description">Description</string>
    <string name="hint_word_count">Word Count</string>
    <string name="string_update_project">Update Project</string>
    <string name="hint_complete">Complete</string>
    <string name="placeholder_time">00:00</string>
    <string name="string_start_sprint">Start Sprint</string>
    <string name="string_end_sprint">End Sprint</string>
    <string name="string_save_sprint">Update Word Count</string>
</resources>