<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardPreventCornerOverlap="true">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/project_icon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:padding="3dp"
            app:srcCompat="@mipmap/ic_launcher_round"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/project_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:layout_marginEnd="10dp"
                android:text="@string/placeholder_project_title"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="10dp"
                android:gravity="start">

                <TextView
                    android:id="@+id/project_wordcount_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="3dp"
                    android:text="@string/placeholder_project_word_count_label"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/project_wordcount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder_project_word_count"
                    android:textSize="12sp" />

            </TableRow>

            <TextView
                android:id="@+id/project_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="10dp"
                android:minHeight="40dp"
                android:scrollbars="vertical"
                android:text="@string/placeholder_project_description"
                android:textSize="12sp" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="4dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/project_completed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:textColor="@color/green"
                    android:textSize="12sp"
                    android:text="@string/string_completed" />

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end">

                    <ImageView
                        android:id="@+id/project_edit_button"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:background="@drawable/edit"
                        tools:ignore="ContentDescription" />

                    <ImageView
                        android:id="@+id/project_delete_button"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginStart="5dp"
                        android:background="@drawable/delete_bin"
                        tools:ignore="ContentDescription" />

                </TableRow>
            </TableRow>

        </LinearLayout>

    </TableRow>

</androidx.cardview.widget.CardView>