<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.SettingsFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/settings_change_profile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:icon="@drawable/settings_profile"
        app:iconSize="25dp"
        app:iconTint="@color/colorAccent"
        app:iconPadding="10dp"
        android:text="@string/settings_change_profile"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        android:gravity="start|center"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/settings_reset_password"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:icon="@drawable/settings_change_pass"
        app:iconSize="25dp"
        app:iconTint="@color/colorAccent"
        app:iconPadding="10dp"
        android:gravity="start|center"
        android:text="@string/settings_reset_password"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_change_profile"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/settings_delete_history"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:icon="@drawable/settings_delete_history"
        app:iconSize="25dp"
        app:iconTint="@color/colorAccent"
        app:iconPadding="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="start|center"
        android:text="@string/settings_delete_history"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_reset_password" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/settings_delete_account"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:icon="@drawable/settings_delete_acc"
        app:iconSize="25dp"
        app:iconTint="@color/colorPrimaryDark"
        app:iconPadding="10dp"
        android:gravity="start|center"
        android:text="@string/settings_delete_account"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_delete_history"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/settings_log_out"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:icon="@drawable/settings_log_out"
        app:iconSize="25dp"
        app:iconTint="@color/colorAccent"
        app:iconPadding="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="start|center"
        android:text="@string/settings_log_out"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/settings_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>